sfSandBoxCode/force-app/main/default/objects/Supplier__c/fields/Include_Withdrawal_Fees_for_MPesa__c.field-meta.xml
<CustomField>
    <fullName>Include_Withdrawal_Fees_for_MPesa__c</fullName>
    <label>Include Withdrawal Fees for MPesa?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>