sfSandBoxCode/force-app/main/default/objects/Supplier__c/fields/Payee_Name_for_MPesa__c.field-meta.xml
<CustomField>
    <fullName>Payee_Name_for_MPesa__c</fullName>
    <label>Payee Name for MPesa</label>
    <length>80</length>
    <type>Text</type>
</CustomField>