sfSandBoxCode/force-app/main/default/objects/Supplier__c/fields/Payee_Number_for_MPesa__c.field-meta.xml
<CustomField>
    <fullName>Payee_Number_for_MPesa__c</fullName>
    <inlineHelpText>Should be in this format: 2547XXXXXXXX</inlineHelpText>
    <label>Payee Number for MPesa</label>
    <length>12</length>
    <type>Text</type>
</CustomField>