sfSandBoxCode/force-app/main/default/objects/Supplier__c/fields/Postal_Address__c.field-meta.xml
<CustomField>
    <fullName>Postal_Address__c</fullName>
    <label>Postal Address</label>
    <type>TextArea</type>
</CustomField>