sfSandBoxCode/force-app/main/default/objects/Supplier__c/fields/Products_Services_Supplied__c.field-meta.xml
<CustomField>
    <fullName>Products_Services_Supplied__c</fullName>
    <label>Products/Services Supplied</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>