sfSandBoxCode/force-app/main/default/objects/Supplier__c/fields/Supplier_Number__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Number__c</fullName>
    <displayFormat>S-{00000}</displayFormat>
    <label>Supplier Number</label>
    <type>AutoNumber</type>
</CustomField>