sfSandBoxCode/force-app/main/default/objects/Supplier__c/listViews/Approved_Suppliers.listView-meta.xml
<ListView>
    <fullName>Approved_Suppliers</fullName>
    <columns>NAME</columns>
    <columns>Payment_Method__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Approved,Preferred</value>
    </filters>
    <label>Approved Suppliers</label>
</ListView>